[package]
name = "kvsbench"
version = "0.0.1"
authors = ["Pranav Gaddamadugu <pranavsaig@gmail.com>"]
description = "Benchmark Tool for Key-Value Stores available in Rust"
homepage = "https://github.com/d0cd/kvsbench"
repository = "https://github.com/d0cd/kvsbench"
readme = "README.md"
keywords = ["benchmark", "embedded-database"]
license = "MIT"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
byte-unit = "1"
cannyls = "0.9"
clap = "2"
crisper = { path = "../crisper" }
futures = "0.1"
gnuplot = "0.0"
indicatif = "0.11"
percent-encoding = "1"
prost = "0.6.0"
rand = "0.6"
rocksdb = "0.12.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
siphasher = "0.3"
sled = "0.23.0"
structopt = "0.2"
trackable = { version = "0.2", features = ["serialize"] }
zmq = "0.9"
